genZFashionAPI/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genzfashion-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: genzfashion-api
  template:
    metadata:
      labels:
        app: genzfashion-api
    spec:
      containers:
      - name: genzfashion-api
        image: genzfashionapi:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
