genZFashionAPI/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: genzfashion-api-service
spec:
  selector:
    app: genzfashion-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
